--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,32 @@ html {
 body {
 	font-family: 'Be Vietnam', sans-serif;
 	font-size: 1rem;
+	margin: 0;
+	line-height: 1.6;
 }
 
 img {
 	max-width: 100%;
 }
+
+h1,
+h2,
+h3,
+h4,
+p {
+	margin: 0;
+	padding: 0;
+}
+
+section {
+	margin: 4em 0;
+	padding: 2em 0;
+}
+
+.container {
+	width: 90%;
+	max-width: 375px;
+	margin: 0 auto;
+}
+
+/* services section */
