--- a/css/style.css
+++ b/css/style.css
@@ -62,4 +62,48 @@ section {
 
 /* header section */
 
+.header {
+  margin-top: 2.875em;
+}
+
+.logo {
+  max-width: 6.875em;
+}
+
+.menu {
+  display: none;
+}
+
+.hamburger {
+  position: relative;
+  width: 1.5rem;
+  height: 1.125rem;
+}
+
+.bar {
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: var(--N-Very-Dark-Blue);
+}
+
+.bar::before,
+.bar::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  background-color: inherit;
+  width: 100%;
+  height: 4px;
+}
+
+.bar::before {
+  top: -6px;
+}
+
+.bar::after {
+  top: 6px;
+}
+
 /* services section */
