--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ html {
   --N-Very-Dark-Blue: hsl(233, 12%, 13%);
   --N-Very-Pale-Red: hsl(13, 100%, 96%);
   --N-Vary-Light-Gray: hsl(0, 0%, 98%);
+  --N-white: hsl(0, 0%, 100%);
 }
 
 body {
@@ -285,12 +286,13 @@ section {
 /* cta section */
 .cta-section {
   background-color: var(--P-Bright-Red);
+  margin-bottom: 0;
 }
 
 .cta-title {
   font-size: 2.5rem;
   text-align: center;
-  color: #fff;
+  color: var(--N-white);
   font-weight: 700;
   margin-top: 5.75rem;
 }
@@ -298,6 +300,69 @@ section {
 .btn-secondary {
   margin-top: 1.8rem;
   margin-bottom: 5.75rem;
-  background-color: #fff;
+  background-color: var(--N-white);
   color: var(--P-Bright-Red);
+}
+
+/* footer section */
+
+.footer {
+  background-color: var(--N-Very-Dark-Blue);
+  padding: 3rem 1rem;
+}
+
+.container-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-input {
+  border: none;
+  border-radius: 2rem;
+  padding: 0.75rem 4rem 0.75rem 1.5rem;
+  font-size: 0.8rem;
+  color: var(--N-Vary-Light-Gray);
+}
+
+.form-btn {
+  border: none;
+  background-color: var(--P-Bright-Red);
+  font: inherit;
+  padding: 0.75rem 2rem;
+  border-radius: 2rem;
+  font-size: 0.8rem;
+  color: var(--N-white);
+}
+
+.footer-links-group {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  min-width: 17rem;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-link {
+  color: var(--N-white);
+  margin: 0.5rem;
+}
+
+.footer-logo {
+  margin-top: 3rem;
+  fill: var(--N-white);
+  width: 6.875rem;
+}
+
+.filter-white {
+  filter: invert(99%) sepia(99%) saturate(166%) hue-rotate(197deg)
+    brightness(114%) contrast(100%);
+}
+
+.footer-copyright {
+  margin-top: 3rem;
 }
