--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ header.overlay {
 	text-align: center;
 	margin: 45px 0;
 	padding: 30px 0;
+	max-width: 100%;
 }
 
 .wrapPerson h2 {
@@ -481,6 +482,7 @@ header.overlay {
 .footer-form {
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 	gap: 0.5em;
 }
 
